--- a/sitemilk/index.html
+++ b/sitemilk/index.html
@@ -14,20 +14,39 @@
             <p>Bestcogs.com is your one-stop site for designing bicycle gearing systems.
             We aim to offer a simple, flexible interface that will let you design
             an optimal gear setup for your bike.</p>
+        <nav>
+            <ul>
+                <li><a href="#get-started">Get Started</a></li>
+                <li><a href="#other-information">Other Information</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <h2>Get Started</h2>
-            <p>If you just want to design a gearing system, <a href="https://itcorp.com/gears.html">click here</a> and choose your chainwheels,
-                cassette/freewheel parameters, and gearing preferences.
-                Your ideal freewheel options will be calculated for you.</p>
-            <p>Or perhaps you want <a href="https://itcorp.com/instructions.html">more detailed
-                instructions.</a>That's often the best way to approach things
-                (RTFM, as they say).</p>
+        <article>
+            <section>
+                <h2>Get Started</h2>
+                    <img src="img/cycle1.jpg" alt="Cycle"/>
+                    <p>If you just want to design a gearing system, <a href="https://itcorp.com/gears.html">click here</a> and choose your chainwheels,
+                        cassette/freewheel parameters, and gearing preferences.
+                        Your ideal freewheel options will be calculated for you.</p>
+                    <p>Or perhaps you want <a href="https://itcorp.com/instructions.html">more detailed
+                        instructions.</a>That's often the best way to approach things
+                        (RTFM, as they say).</p>
+            </section>
+            <section>
+                <h2>Other Information</h2>
+                    <img src="img/cycle3.png" alt="Cycle"/>
+                    <p>This site is still under development. But we already have some <a href="https://itcorp.com/faqs.html">FAQs</a> about the site and about bicycle gears. We also debunk some <a href="https://itcorp.com/myths.html">common myths and misconceptions</a> about gearing.</p>
+            </section>
+        </article>
+        <aside>
+            <h3>Cycling Tips</h3>
+                <p>When choosing your bike gears, You need to assess your riding style, think about the terrain you'll be riding on and consult with local bike shops for expert advice.</p>
+        </aside>      
     </main>
     <footer>
-        <h2>Other Information</h2>
-            <p>This site is still under development. But we already have some <a href="https://itcorp.com/faqs.html">FAQs</a> about the site and about bicycle gears. We also debunk some <a href="https://itcorp.com/myths.html">common myths and misconceptions</a> about gearing.</p>
+        <h2>How to contact us?</h2>
+            <p>Do not call us, do not write to corporate email, we do not bear any responsibility.</p>
     </footer>
-
 </body>
 </html>
